flinks_challenge/nginx_app/nginxapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxapp2
  namespace: flinks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: mychart
        image: "localhost:32000/nginxapp:2.1"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginxsvc2
  namespace: flinks
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: nginx2
