flinks_challenge/nginx_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: flinks
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "challenge.domain.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxsvc
            port:
              number: 80
  - host: "challenge-api.domain.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxsvc2
            port:
              number: 80
